--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MDPproj">
-        <activity android:name=".tabActivity"></activity>
+        <activity android:name=".messagePageTwo"></activity>
+        <activity android:name=".messagePageOne" />
+        <activity android:name=".workoutsPage" />
+        <activity android:name=".profilePage" />
+        <activity android:name=".tabActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
